feat: enhance question and passage handling by updating bulk question creation to support multiple media types, refactor random selection queries to use 'RANDOM()', and improve answer sorting logic for better user experience